--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <body>
 	<nav id="navigation">
 		<a href="#home" id="index">home</a>
-		<a href="#about" id="about">about</a>
+		<a href="#about" id="about">about us</a>
+		<a href="#services" id="about">services</a>
 		<a href="#projects" id="projects">projects</a>
 	</nav>
 
