--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
 
 
 
-  <div id="content"></div>
+	<div id="content"></div>
 
-
+	<footer>
+		<p>Contact details: email: julesmutius@gmail.com</p>
+		<!-- <p>Tel: 255(0)782038444</p> -->
+		<a href="tel:0782038444">255(0)782038444</a>
+	</footer>
+	
+	
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   
   <script type="text/javascript">
